docker-registry/docker-registry-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
        name: registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: registry-pvc
          mountPath: /var/lib/registry
          subPath: registry
        - name: auth-vol
          mountPath: /auth
          readOnly: true
      volumes:
        - name: registry-pvc
          persistentVolumeClaim:
            claimName: longhorn-docker-registry-pvc
        - name: auth-vol
          secret:
            secretName: auth-secret
