docker-registry/docker-registry-service.yml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: docker-registry
  labels:
    app: registry
spec:
  selector:
    app: registry
  ports:
    - name: docker-port
      protocol: TCP
      port: 5000
      targetPort: 5000
